# nvAge

./: .gitignore  .impeccable.md  AGENTS.md  CHANGELOG.md  LICENSE  README.md  com.doug.nvAge.yml  com.doug.nvage.desktop  com.doug.nvage.yml  mistakes.md  nvage-prd.md  opencode.json  package-lock.json  package.json
.github/workflows/: build.yml  flatpak.yml  pages.yml
.opencode/: mistakes.md  progress.md
.opencode/agents/: build.md  plan.md  review.md
.opencode/commands/: catchup.md  handoff.md
.opencode/plugins/: env-guard.ts  project-tools.ts
docs/: index.html
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  crypto.rs  index.rs  lib.rs  main.rs  note.rs  sync_git.rs  sync_provider.rs  util.rs  watcher.rs
