[package]
name = "nvage"
version = "0.1.0"
description = "A local-first, cross-platform notes app in the tradition of Notational Velocity and nvALT."
authors = ["you"]
edition = "2021"

[lib]
name = "nvage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "7"
slug = "0.1"
once_cell = "1"
log = "0.4"
anyhow = "1"
dirs = "5"
age = { version = "0.10", features = ["armor"] }
rand = "0.8"
